--- a/docs/服务器渲染配置文档.md
+++ b/docs/服务器渲染配置文档.md
@@ -92,4 +92,4 @@ export default class Admin extends React.Component {
 ```
 
 + hydrate的策略与render的策略不一样，其并不会对整个dom树做dom patch，其只会对text Content内容做patch，对于属性并不会做patch。而是
-尽量使用服务器端返回的代码的HTML的结构,效率更高
+尽量使用服务器端返回的代码的HTML的结构,效率更高,如果是客户端进行hydrate渲染react会进行警告Expected server HTML to contain a matching in
